Trying to fix issue of background images not loading on mobile

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -107,9 +107,8 @@ $lg: 1200px; //Large Devices Large Desktops and Up
 html,
 body {
   font-family: $body-text;
-  height: 100%;
   min-height: 100%;
-  transition: .2s;
+  height: 100%;
 }
 
 body {
@@ -133,6 +132,8 @@ body {
   /* Set a background color that will be displayed
      while the background image is loading */
   background-color: $primary-light;
+
+  overflow-y: scroll;
 }
 
 @media only screen and (min-width : 768px) {
